[FE] Fixed CSS overflow issues.

--- a/frontend/src/feed/components/feed-list/feed-list.component.css
+++ b/frontend/src/feed/components/feed-list/feed-list.component.css
@@ -48,6 +48,10 @@
     padding: 5px;
 }
 
+:host /deep/ div.news-item-content {
+    display: block;
+}
+
 :host /deep/ div.news-item-info-container {
     width: 100%;
 }
@@ -160,6 +164,16 @@
 :host /deep/ .news-item-info-container h5 {
     padding-top: 0;
     padding-bottom: 0;
+}
+
+:host /deep/ .news-item-tag-container, h5, span.tag.badge {
+    max-width: 100%;
+}
+
+:host /deep/ .news-item-tag-container span.tag.badge {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 :host /deep/ .news-item-tag-container span.tag.badge.selected,
